logged in user change password api added, docs updated
