# docs/swagger.json
@@ -73,6 +73,44 @@
                 }
             }
         },
+        "/api/v1/auth/password": {
+            "put": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "change logged in user password",
+                "parameters": [
+                    {
+                        "description": "Change password inputs",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/auth.PasswordDto"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/core.SuccessResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/auth/refresh": {
             "post": {
                 "consumes": [
@@ -331,6 +369,15 @@
                         "name": "id",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "description": "Update community inputs",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/communities.UpdateDto"
+                        }
                     }
                 ],
                 "responses": {
@@ -487,6 +534,25 @@
                 }
             }
         },
+        "auth.PasswordDto": {
+            "type": "object",
+            "required": [
+                "current_password",
+                "new_password"
+            ],
+            "properties": {
+                "current_password": {
+                    "type": "string",
+                    "maxLength": 90,
+                    "minLength": 8
+                },
+                "new_password": {
+                    "type": "string",
+                    "maxLength": 90,
+                    "minLength": 8
+                }
+            }
+        },
         "auth.RefreshDto": {
             "type": "object",
             "required": [
@@ -606,6 +672,25 @@
             }
         },
         "communities.CreateDto": {
+            "type": "object",
+            "required": [
+                "description",
+                "title"
+            ],
+            "properties": {
+                "description": {
+                    "type": "string",
+                    "maxLength": 250,
+                    "minLength": 2
+                },
+                "title": {
+                    "type": "string",
+                    "maxLength": 190,
+                    "minLength": 2
+                }
+            }
+        },
+        "communities.UpdateDto": {
             "type": "object",
             "required": [
                 "description",
